mdmCeneveo/src/objects/Sales_Data_Upload_Configurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Process_Records_Limit__c</fullName>
        <label>Process Records Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Successfully_Records_Limit__c</fullName>
        <label>Successfully Records Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>With_Error_Records_Limit__c</fullName>
        <label>With Error Records Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Without_Error_Records_Limit__c</fullName>
        <label>Without Error Records Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Data Upload Configurations</label>
</CustomObject>